lint: use Black formatter and update flake8 config to prevent conflic with whitespace

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,9 @@
 {
     "python.linting.flake8Enabled": true,
-    "files.trimTrailingWhitespace": true
+    "python.formatting.provider": "none",
+    "[python]": {
+        "files.trimTrailingWhitespace": true,
+        "editor.defaultFormatter": "ms-python.black-formatter",
+        "editor.formatOnSave": true
+    }
 }
