--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "python.linting.flake8Enabled": true,
     "python.formatting.provider": "none",
+    "python.linting.flake8Args": [
+        "--per-file-ignores", "__init__.py:F401"
+    ],
     "[python]": {
         "files.trimTrailingWhitespace": true,
         "editor.defaultFormatter": "ms-python.black-formatter",
